...
    modifier: Modifier = Modifier,
    label: @Composable (() -> Unit)? = null,
    value: LocalTime,
    is24HourView: Boolean = true,
    formatter: DateTimeFormatter = DateTimeFormatter.ofPattern(if (is24HourView) "HH:mm" else "hh:mm a"),
    icon: ImageVector = Icons.Filled.DateRange,
    iconContentDescription: String = "Select a time",
    onValueChange: (LocalTime) -> Unit
) {
    val context = LocalContext.current
    val focusManager = LocalFocusManager.current

    val datePickerDialog = remember {
...
